kubernetes/clusters/1276-core/databases/db-routes/mongodb-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mongodb
  namespace: databases
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: mongodb
  rules:
    - backendRefs:
        - name: mongodb-svc
          port: 27017
