kubernetes/clusters/1276-core/databases/db-routes/mysql-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mysql
  namespace: databases
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: mysql
  rules:
    - backendRefs:
        - name: mysql
          port: 3306
